--- a/_posts/2019-12-29-the-us-narrative-today.html
+++ b/_posts/2019-12-29-the-us-narrative-today.html
@@ -1450,107 +1450,107 @@ stories:
   domain: http://www.kspress.com/
   link: http://kspress.com/news/2019/12/18/iola-ellsworth-get-incubator-grants
 images:
-- name: beach-clouds-lifeguard-beachclouds-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-crafty-painting.jpg
-- name: old-house-oldhouse-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-alberto-giacometti.jpg
-- name: locked-up-steam-lock-up-steam-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-green-zuma.jpg
-- name: la-muse-city-clouds-waterfront.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-city-clouds-waterfront.jpg
-- name: stalin-time-old-comuter-wheels-crypto.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-comuter-wheels-crypto.jpg
-- name: oldhouse-granaryfield-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-monet-one.jpg
-- name: old-door-lock-old-door-lock-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-alien-goggles.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-clean-view.jpg
-- name: mistywoods-babyfoot-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-sand-paper.jpg
-- name: old-door-lock-old-door-lock-2-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-creativity.jpg
-- name: dragon-desert-desert-dragon-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-aqua.jpg
-- name: carry-load-carryload-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-space-pizza.jpg
-- name: border-crossing-bordercrossing-dry-skin.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-dry-skin.png
-- name: crow_smooth_ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_smooth_ride.jpg
-- name: beach-clouds-lifeguard-beachclouds-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-aqua.jpg
-- name: crow_rainbow_festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_rainbow_festival.jpg
-- name: beach-rocks-beach-rocks-currents-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-matrix.jpg
-- name: nazi-invasion-bletchley-computer-racks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-bletchley-computer-racks.jpg
-- name: locked-up-steam-lock-up-steam-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-clean-view.jpg
-- name: powerlines-power-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-internet-numbers.jpg
-- name: abandonedbuildings_kandinsky_bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_kandinsky_bv.jpg
-- name: oldtrain-oldtrain-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-dali-three.jpg
-- name: adam-smith-adam-smith-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-copper-circuit.jpg
-- name: castle-wall-DSC-0067-crafty-painting.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-crafty-painting.JPG
-- name: statue-of-liberty-front-view-statueofliberty-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-emily-carr.jpg
-- name: mediterranean-mediterranean-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-pablo-blue.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-dark-dali.jpg
+- name: oldtrain-oldtrain-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-oily-mcoilface.jpg
+- name: abandonedbuildings_gred_mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_gred_mash.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-atari-asteroids.jpg
+- name: oldhouse-granaryfield-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-gan-vogh.jpg
+- name: nazi-invasion-docks-in-itealy-tower.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-docks-in-itealy-tower.jpg
+- name: locked-up-steam-lock-up-steam-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-jap-wav-pr.jpg
+- name: dragon-desert-desert-dragon-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-kand-two.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-china-prop.jpg
+- name: legal-statue-legalstatue-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-light-dali.jpg
+- name: nazi-invasion-border-fence-down-the-line-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-border-fence-down-the-line-2.jpg
+- name: copper-circuit-IMG_7559.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7559.jpg
+- name: hollywood-building-hollywood-building-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dry-skin.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-colorful-dream.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-colorful-dream.png
+- name: nazi-invasion-hallway-mirrors-hotel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-hallway-mirrors-hotel.jpg
+- name: beach-rocks-beach-rocks-currents-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-constitution.jpg
+- name: cargo-ship-cargo-ship-on-sea-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-blue-brush.jpg
+- name: braceros-domingo-ulloa-downtown-125thstreet.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-downtown-125thstreet.jpg
+- name: beach-clouds-lifeguard-beachclouds-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-blue-brush.jpg
+- name: death-valley-death-valley-national-park-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-creativity.jpg
+- name: old-granary-field-granaryfield-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-dry-skin.jpg
+- name: status-berlin-status-berlin-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-blue-circuit-3.jpg
+- name: old-church-oldchurch-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-purple-pond.jpg
+- name: meadowbutterfly-meadow-butterfly-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-gred-mash.jpg
+- name: dc-statue-dcstatue-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-alberto-giacometti.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-space-pizza.jpg
+- name: diamondcreek-diamondcreek-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/diamondcreek-diamondcreek-still-1200.jpg
+- name: yuma-bank-yuma-bak-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-colorful-blocks.jpg
+- name: copper-circuit-yellow-roses-garden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-yellow-roses-garden.jpg
+- name: downtown-los-angeles-downtown-la-constitution.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-constitution.JPG
 - name: fence-mexico-monet-one.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-monet-one.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-marcel-duchamp.jpg
-- name: oldtrain-oldtrain-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-space-pizza.jpg
-- name: oldroad-old-road-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-post-modern.jpg
-- name: copper-circuit-ship-bird-foreground.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-ship-bird-foreground.jpg
-- name: christianity-christianity-under-construction-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-copper-circuit-2.jpg
-- name: machine-road-machine-road-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-dark-dali.jpg
-- name: nazi-invasion-concert-hall-bright-lights.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-concert-hall-bright-lights.jpg
-- name: stalin-time-close-to-all-remote-aircraft.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-close-to-all-remote-aircraft.jpg
-- name: old-barn-old-barn-1500-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-blue-electricity.jpg
-- name: blossombar-rainbow-festival-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-rainbow-festival-file-00-00-50-62.jpg
-- name: oldcabin-oldcabin-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-wols.jpg
-- name: powerlines-power-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-alien-goggles.jpg
-- name: razorcliff-razorcliff-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-purple-storm.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-emily-carr.jpg
-- name: liberty-back-statue-liberty-back-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-really-hot.jpg
-- name: abandonedbuildings_dali_two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_dali_two.jpg
-- name: old-barn-old-barn-1500-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-rainbow-festival.jpg
-- name: store-on-corner-store-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-atari-missle.jpg
-- name: copper-circuit-cargo-ship_36587814601_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-cargo-ship_36587814601_o.jpg
-- name: walled-garden-walled-garden-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-attack-planes.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-kand-two.jpg
-- name: locked-up-steam-lock-up-steam-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-creativity.jpg
-- name: stories-new-27-93-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-27-93-800-500-0-max-0--1--1.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-pablo-blue.jpg
+- name: border-crossing-bordercrossing-gan-vogh.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-gan-vogh.png
+- name: wind-mills-windmills-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-crunch-paper.jpg
+- name: copper-circuit-dinosaur-walking-desert.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-dinosaur-walking-desert.jpg
+- name: art-museum-art-museum-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-neo-instinct.jpg
+- name: razorwire-DSC-0080-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-purple-storm.jpg
+- name: school-clouds-church-clouds-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-emily-carr.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-wols.jpg
+- name: mistywoods-babyfoot-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-sand-paper.jpg
+- name: mistywoods-babyfoot-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-crabapple.jpg
+- name: oldhousecars-house-old-cars-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-atari-missle.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-copper-circuit-2.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-copper-circuit-2.JPG
+- name: white-house-lawn-white-house-lawn-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-green-zuma.jpg
+- name: copper-circuit-los-angeles-downtown-from-afar.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-los-angeles-downtown-from-afar.jpg
+- name: amusement-park-amusement-park-2-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-green-zuma.jpg
+- name: art-museum-art-museum-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-free-woman.jpg
+- name: fence-fence-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-rainbow-festival.jpg
+- name: statue-of-liberty-front-view-statueofliberty-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-dark-soul.jpg
+- name: catacombs-catacombs.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs.jpg
+- name: copper-circuit-train-car_35892468014_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-train-car_35892468014_o.jpg
+- name: downtheline-downtheline-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-emily-carr.jpg
 ---
 Routt County Donates Bus To Benefit Senior Citizens.&nbsp;Minnesota Hosts Brooklyn, Looks To Stop Home Losing Streak.&nbsp;Danvers Battles But Can't Get Over Hump In Championship Loss To Gloucester.&nbsp;Renovating Your Kitchen What You Should Do?.&nbsp;Taking Necessary Steps For Securing Higher Education.&nbsp;Ukraine, Eastern Rebels Swap Prisoners In Move To End War.&nbsp;And The Winner Is.&nbsp;Student Athlete Of The Week.&nbsp;
